[package]
name = "ruff-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruff_api"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
glob = "0.3.1"
rustc-hash = "1.1.0"
ruff = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_linter = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_workspace = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
