[package]
name = "ruff-api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruff_api"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.25.0", features = ["extension-module", "abi3-py39"]}

anstyle = "1.0.10"
glob = "0.3.2"

ruff_formatter = {git = "https://github.com/astral-sh/ruff.git", tag = "0.11.10"}
ruff_linter = {git = "https://github.com/astral-sh/ruff.git", tag = "0.11.10"}
ruff_python_ast = {git = "https://github.com/astral-sh/ruff.git", tag = "0.11.10"}
ruff_python_formatter = {git = "https://github.com/astral-sh/ruff.git", tag = "0.11.10"}
