[package]
name = "ruff-api"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruff_api"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.27.1", features=["extension-module", "abi3-py39"]}
glob = "0.3.2"
ruff = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.3" }
ruff_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.3" }
ruff_linter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.3" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.3" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.3" }
