[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ruff-api"
description = "Experimental API for Ruff"
readme = "README.md"
authors = [
    {name="Amethyst Reese", email="amethyst@n7.gg"},
]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "attribution==1.8.0",
    "flake8==7.3.0",
    "maturin==1.9.6",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "ufmt==2.8.0",
    "usort==1.0.8.post1",
]

[project.urls]
Home = "https://github.com/amyreese/ruff-api"

[tool.maturin]
module-name = "ruff_api._rust"
python-packages = ["ruff_api"]
python-sources = "."

[tool.attribution]
name = "ruff-api"
package = "ruff_api"
cargo_packages = ["ruff-api"]
version_file = true
ignored_authors = ["dependabot[bot]"]
signed_tags = true

[tool.mypy]
strict = true

[tool.pytest.ini_options]
python_files = "tests/*.py"

[tool.ufmt]
formatter = "ruff-api"
sorter = "ruff-api"
